# wrds_event_study_polars

./: AI Prompt - Refactor wrds_event_study_polars with polars-ols.md  CLAUDE.md  LICENSE  README.md  event_study_test.py  evt_date_2020.txt  main.py  pyproject.toml  wrds_event_study_polars.py  wrds_event_study_polars_ols.py
