[project]
name = "wrds-event-study-polars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.39.0",
    "polars-ols>=0.3.5",
    "pyarrow>=23.0.1",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
